@@ -17,7 +17,9 @@
  */
 package org.apache.cassandra.cli;
 
+import org.apache.cassandra.cli.transport.SimpleTransportFactory;
 import org.apache.commons.cli.*;
+import org.apache.thrift.transport.TTransportFactory;
 
 /**
  *
@@ -35,6 +37,7 @@ public class CliOptions
     private static final String HOST_OPTION = "host";
     private static final String PORT_OPTION = "port";
     private static final String UNFRAME_OPTION = "unframed";
+    private static final String TRANSPORT_FACTORY = "transport-factory";
     private static final String DEBUG_OPTION = "debug";
     private static final String USERNAME_OPTION = "username";
     private static final String PASSWORD_OPTION = "password";
@@ -64,6 +67,7 @@ public class CliOptions
         options.addOption("f",  FILE_OPTION,     "FILENAME", "load statements from the specific file");
         options.addOption(null, JMX_PORT_OPTION, "JMX-PORT", "JMX service port");
         options.addOption(null, SCHEMA_MIGRATION_WAIT_TIME,  "TIME", "Schema migration wait time (secs.), default is 10 secs");
+        options.addOption("tf", TRANSPORT_FACTORY, "TRANSPORT-FACTORY", "Fully-qualified TTransportFactory class name for creating a connection to cassandra");
 
         // options without argument
         options.addOption("B",  BATCH_OPTION,   "enabled batch mode (suppress output; errors are fatal)");
@@ -98,8 +102,15 @@ public class CliOptions
             // Look to see if frame has been specified
             if (cmd.hasOption(UNFRAME_OPTION))
             {
+                if (cmd.hasOption(TRANSPORT_FACTORY))
+                    throw new IllegalArgumentException("--unframed and --transport-factory options should not be fixed.");
+
                 css.framed = false;
+                css.transportFactory = new SimpleTransportFactory();
             }
+
+            if (cmd.hasOption(TRANSPORT_FACTORY))
+                css.transportFactory = validateAndSetTransportFactory(cmd.getOptionValue(TRANSPORT_FACTORY));
 
             // Look to see if frame has been specified
             if (cmd.hasOption(DEBUG_OPTION))
@@ -222,4 +233,21 @@ public class CliOptions
         }
     }
 
+    private static TTransportFactory validateAndSetTransportFactory(String transportFactory)
+    {
+        try
+        {
+            Class factory = Class.forName(transportFactory);
+
+            if(!TTransportFactory.class.isAssignableFrom(factory))
+                throw new IllegalArgumentException(String.format("transport factory '%s' " +
+                                                                 "not derived from TTransportFactory", transportFactory));
+
+            return (TTransportFactory) factory.newInstance();
+        }
+        catch (Exception e)
+        {
+            throw new IllegalArgumentException(String.format("Cannot create a transport factory '%s'.", transportFactory), e);
+        }
+    }
 }
