@@ -18,10 +18,12 @@
 
 package org.apache.cassandra.cli;
 
-import org.apache.cassandra.tools.NodeProbe;
-
 import java.io.InputStream;
 import java.io.PrintStream;
+
+import org.apache.cassandra.cli.transport.FramedTransportFactory;
+import org.apache.cassandra.tools.NodeProbe;
+import org.apache.thrift.transport.TTransportFactory;
 
 /**
  * Used to hold the state for the CLI.
@@ -41,6 +43,8 @@ public class CliSessionState
     public int     jmxPort = 7199;// JMX service port
     public boolean verbose = false; // verbose output
     public int     schema_mwt = 10 * 1000;    // Schema migration wait time (secs.)
+    public TTransportFactory transportFactory = new FramedTransportFactory();
+
     /*
      * Streams to read/write from
      */
